--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,60 @@
 body {
     font-size: 15px;
-    color: rgb(5, 0, 0);
-    background-color : white;
+    color: black;
+    background-color : rgb(253, 150, 150);
     font-family: 'Oxygen', sans-serif;
   }
+
   .title  h3{
     text-align: center;
     font-weight: bold;
   }
+
   #header-nav {
     background-color: grey;
     border-radius: 0;
     border: 5px black;
   }
+  
   .foodlcc {
+    width: 150px;
+    height: 45px;
+    padding: 10px;
+    border: 3px solid black;
+    background-color: burlywood;
+    border-radius: 2%;
+    box-shadow: rgb(92, 89, 85);
     font-weight: bold;
     font-size: 25px;
     position: relative;
     left: 25px;
     top: 15px;
   }
+
+  .foodlcc section {
+    position: relative;
+    left: 5px;
+    bottom: 7px;
+  }
+
   .collapsable-nav {
     text-align: center;
     font-weight: bold;
     color: black;
   }
+
   .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
     border: 1px solid #413539;
   }
+
   .navbar-header button.navbar-toggle {
     clear: both;
     margin-top: -15px;
   }
   
   .chh {
+    background-color: blanchedalmond;
+    border: 3px solid black;
     text-align: center;
     font: 1em sans-serif;
     font-weight: bold;
@@ -43,9 +64,12 @@ body {
   .chh p {
     position: relative;
     left: 10px;
+    top: 5px;
   }
 
   .ch {
+    background-color: blanchedalmond;
+    border: 3px solid black;
     text-align: center;
     font: 1em sans-serif;
     font-weight: bold;
@@ -54,10 +78,13 @@ body {
   .ch p {
     position: relative;
     left: 10px;
+    top: 5px;
   }
+
   .row {
     background-color:white;
   }
+
   #column {
     width: 375px;
     height: 200px;
@@ -67,10 +94,10 @@ body {
     text-align: center;
     color: black;
     vertical-align: middle;
-    border-right: 15px solid  white;
-    border-bottom: 10px solid white;
-
+    border-right: 15px solid  rgb(253, 150, 150);
+    border-bottom: 10px solid rgb(253, 150, 150);
   }
+
   #colum {
     width: 375px;
     height: 200px;
@@ -80,32 +107,22 @@ body {
     text-align: center;
     color: black;
     vertical-align: middle;
-    border-right: 15px solid  white;
-    border-bottom: 10px solid white;
-
+    border-right: 15px solid  rgb(253, 150, 150);
+    border-bottom: 10px solid rgb(253, 150, 150);
   }
-
 @media (min-width: 1200px) {
-  
-  
+
 }
-
-
 @media (min-width: 992px) and (max-width: 1199px) {
-
- 
   #column {
     width: 450px;
   }
   #colum {
     width: 900px;
   } 
-
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-
-  
   #column {
     width: 360px;
     height: 275px;
@@ -113,18 +130,13 @@ body {
   #colum {
     width: 720px;
   } 
-  
   .chh p {
     position: relative;
     left: 10px;
   }
-
-
 }
 
-
 @media (max-width: 767px) {
- 
   .navbar-brand {
     padding-top: 10px;
     height: 80px;
@@ -137,19 +149,14 @@ body {
   #column {
     position: relative;
     left: 10px;
-    width: 450px;
+    width: 525px;
   }
   #colum {
     position: relative;
     left: 10px;
-    width: 450px;
+    width: 525px;
   } 
-
- 
-
 }
-
-
 
 @media (max-width: 479px) {
   #column {
@@ -164,6 +171,4 @@ body {
     width: 350px;
     height: 250px;
   } 
- 
-  
 }
